objects/ASI_CN_NPL_ATL_Plan__c.object
<CustomObject>
    <description>ASI CN NPL New Product Launch ATL Launch Plan, Lookup child object of New Product Launch Request</description>
    <fields>
        <fullName>ASI_CN_NPL_DigitalMedia_End_Date__c</fullName>
        <label>Period (End Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_DigitalMedia_Markets__c</fullName>
        <label>Markets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_DigitalMedia_Number__c</fullName>
        <label>#</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_DigitalMedia_Start_Date__c</fullName>
        <label>Period (Start Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Insertion_Date__c</fullName>
        <label>Insertion Date (mm/dd)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Market_Location__c</fullName>
        <label>Market &amp; Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Markets__c</fullName>
        <label>Markets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Media_Format__c</fullName>
        <label>Media Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building LCD</fullName>
                </value>
                <value>
                    <fullName>Mega LED</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Cinema Screen</fullName>
                </value>
                <value>
                    <fullName>Others, please specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Number__c</fullName>
        <label>#</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Other_Format__c</fullName>
        <label>Other Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Outdoor_End_Date__c</fullName>
        <label>Period (End Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Outdoor_Start_Date__c</fullName>
        <label>Period (Start Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Sample_Requirement__c</fullName>
        <label>Sample Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_TV_End_Date__c</fullName>
        <label>Period (End Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_TV_Start_Date__c</fullName>
        <label>Period (Start Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Title__c</fullName>
        <label>Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Product_Launch_Request__c</fullName>
        <label>New Product Launch Request</label>
        <referenceTo>ASI_CN_NPL_NPL_Request__c</referenceTo>
        <relationshipLabel>ATL Launch Plans</relationshipLabel>
        <relationshipName>New_Product_ATL_Launch_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ATL Launch Plan</label>
    <nameField>
        <displayFormat>ATL-{YY}-{00000}</displayFormat>
        <label>ATL Launch Plan No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATL Launch Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>